sf-hrms/force-app/main/default/objects/Leave_Request__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Why the requester cancelled. Kept so a cancelled request still explains itself in the history.</description>
</CustomField>