sf-hrms/force-app/main/default/objects/Leave_Request__c/fields/Cancelled_On__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_On__c</fullName>
    <label>Cancelled On</label>
    <type>DateTime</type>
    <description>When the request was cancelled. Set by the cancel action, never by hand.</description>
</CustomField>