sf-hrms/force-app/main/default/objects/Leave_Request__c/fields/Half_Day_Session__c.field-meta.xml
<CustomField>
    <fullName>Half_Day_Session__c</fullName>
    <label>Half Day Session</label>
    <type>Picklist</type>
    <description>Which half of the shift a half day covers. Only meaningful when Half_Day__c is true.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>First Half</fullName><default>true</default><label>First Half</label></value>
            <value><fullName>Second Half</fullName><default>false</default><label>Second Half</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>