sf-hrms/force-app/main/default/objects/Leave_Request__c/validationRules/Date_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Order</fullName>
    <active>true</active>
    <errorConditionFormula>From_Date__c &gt; To_Date__c</errorConditionFormula>
    <errorMessage>From Date cannot be after To Date.</errorMessage>
</ValidationRule>