sf-hrms/force-app/main/default/objects/Leave_Request__c/validationRules/Days_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Days_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Days__c &lt;= 0</errorConditionFormula>
    <errorMessage>Leave days must be greater than zero.</errorMessage>
</ValidationRule>