sf-hrms/force-app/main/default/objects/Leave_Request__c/listViews/All_Leave_Requests.listView-meta.xml
<ListView>
    <fullName>All_Leave_Requests</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>Days__c</columns>
    <columns>Status__c</columns>
    <columns>Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leave Requests</label>
</ListView>