sf-hrms/force-app/main/default/objects/Leave_Request__c/listViews/Pending_Leave_Requests.listView-meta.xml
<ListView>
    <fullName>Pending_Leave_Requests</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>Days__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Leave Requests</label>
</ListView>